# serverless-rust-template

./: .gitignore  README.md
.github/workflows/: deploy.yml
core/: Cargo.toml  build.rs
core/bindings/uniffi/myapp/: myapp.kt
core/src/: lib.rs  myapp.udl
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/auth/: AuthContext.tsx  LoginButton.tsx  api.ts  index.ts
infra/: api.tf  auth.tf  backend.tf  data.tf  frontend.tf  github-oidc.tf  lambda-role.tf  main.tf  outputs.tf  terraform.dev.tfvars.example  terraform.prod.tfvars.example  terraform.tfvars.example  variables.tf
lambdas/: Cargo.toml
lambdas/api-handler/: Cargo.toml
lambdas/api-handler/src/: auth.rs  main.rs
lambdas/api-handler/src/routes/: health.rs  items.rs
lambdas/shared/: Cargo.toml
lambdas/shared/src/: config.rs  models.rs
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/example/myapp/: MainActivity.kt
mobile/android/app/src/main/java/com/example/trialstream/: MainActivity.kt
mobile/android/app/src/main/java/com/example/trialstream/ui/theme/: Theme.kt
mobile/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/android/gradle/wrapper/: gradle-wrapper.properties
mobile/ios/: project.yml
mobile/ios/myapp/: Info.plist
mobile/ios/myapp/Sources/: AuthManager.swift  ContentView.swift  mappApp.swift
mobile/ios/myapp/rust/: myapp-Bridging-Header.h
