[package]
name = "trialstream-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uniffi = { version = "0.28" }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
