[workspace]
resolver = "2"
members = [
    "api-handler",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
lambda_runtime = "0.13"
aws_lambda_events = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "shared" }
jsonwebtoken = "9"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
